k8s/02-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ai-interview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/balsem2/ai-interview-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ai-interview
spec:
  selector:
    app: backend
  ports:
    - port: 8001
      targetPort: 8001
