k8s/07-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-interview-ingress
  namespace: ai-interview
spec:
  rules:
    - host: ai-interview.local
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
